--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,53 @@
-.App {
-  text-align: center;
+/*Custom styles*/
+body{
+  font-family: "Inter",sans-serif;
+  font-size: 13px;
+  color: #606164;
 }
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
+  color: #1c1e22;
+  font-weight: 600;
+  line-height: 1;
+  margin-bottom: 0.5rem;
+  font-family: inherit;
+}
+.h1, h1{
+  font-size: 1.375rem;
+}
+.h3, .h4, h3, h4{
+  font-size: 1.125rem;
+}
+b, strong{
+  font-weight: 500;
+}
+article, aside, details, figcaption, figure, footer, header, main, menu, nav, section, summary{
+  display: block;
+}
+#products .product-thumbnail, .featured-products .product-thumbnail, .product-accessories .product-thumbnail, .product-miniature .product-thumbnail{
+  display: block;
+}
+ul{
+  list-style: none;
+  padding-left: 0;
+}
+#products .comments_note, .featured-products .comments_note, .product-accessories .comments_note, .product-miniature .comments_note{
+  color: #7a7a7a;
+}
+a{
+  transition: all 300ms linear;
+  text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 .App-logo {
   height: 40vmin;
