--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -4,13 +4,13 @@
     margin-bottom: 60px;
 }
 
-.popular-categories-main .pos_title {
+.section-home-page .pos_title {
     position: relative;
     display: block;
     margin-bottom: 30px;
 }
 
-.popular-categories-main .pos_title h2 {
+.section-home-page .pos_title h2 {
     margin: 0;
     position: relative;
     text-transform: capitalize;
@@ -22,7 +22,7 @@
     color: #1c1e22;
 }
 
-.popular-categories-main .pos_title .desc_title {
+.section-home-page .desc_title {
     color: #757171;
     font-weight: 400;
     line-height: 18px;
@@ -35,6 +35,7 @@
 
 .popular-categories-main .content-list {
     border: 1px solid #e5e5e5;
+    margin: 0 auto;
 }
 
 .popular-categories-main .content-list .item-categories {
@@ -44,6 +45,22 @@
     align-items: center;
     flex-direction: row-reverse;
     padding: 35px 20px;
+    justify-content: space-between;
+}
+
+.popular-categories-main .content-list .item-categories .desc-listcategoreis .name_categories {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.popular-categories-main .content-list .item-categories .desc-listcategoreis .name_categories a {
+    color: #1c1e22;
+    font-weight: 600;
+}
+
+.popular-categories-main .content-list .item-categories .desc-listcategoreis .name_categories a:hover {
+    color: #15bd68;
 }
 
 .popular-categories-main .content-list .item-categories:nth-child(-n+3),
@@ -53,4 +70,480 @@
 
 .popular-categories-main .content-list .item-categories:nth-child(-n+4) {
     border-bottom: 1px solid #e5e5e5;
+}
+
+/* __________________ PosSpecialProducts*/
+
+.pos-special-products {
+    position: relative;
+    margin-bottom: 60px;
+}
+
+.pos-special-products .owl-stage-outer {
+    border: 1px solid #e5e5e5;
+}
+
+.section-home-page .slick-slider {
+    position: unset;
+}
+
+.section-home-page .slick-prev:before {
+    content: '';
+    font-size: 50px;
+    position: absolute;
+    top: 401px;
+    left: 1752px;
+}
+
+.section-home-page .slick-prev {
+    position: absolute;
+    left: 94%;
+    top: 7%;
+    transition: all 300ms linear;
+    text-align: center;
+    color: #1c1e22;
+    width: 34px;
+    height: 34px;
+    border: 1px solid #e5e5e5;
+    border-radius: 50%;
+    background: #fff;
+    z-index: 1;
+    display: inline-flex !important;
+    align-items: center;
+    justify-content: center;
+    font-size: 0;
+    line-height: 1;
+
+}
+
+.section-home-page .slick-next {
+    /* color: #474747; */
+    position: absolute;
+    top: 7%;
+    right: 0;
+    transition: all 300ms linear;
+    text-align: center;
+    color: #1c1e22;
+    width: 34px;
+    height: 34px;
+    border: 1px solid #e5e5e5;
+    border-radius: 50%;
+    background: #fff;
+    z-index: 1;
+    display: inline-flex !important;
+    align-items: center;
+    justify-content: center;
+    font-size: 0;
+    line-height: 1;
+}
+
+.section-home-page .slick-prev:hover,
+.section-home-page .slick-next:hover {
+    background: #15bd68;
+}
+
+.section-home-page .slick-prev:hover .slider_iconbanner_prev,
+.section-home-page .slick-next:hover .slider_iconbanner_next {
+    color: #fff;
+}
+
+.section-home-page .slick-next:before {
+    content: '';
+    font-size: 50px;
+    position: absolute;
+    right: 120px;
+    top: 368px;
+
+}
+
+.section-home-page .slider_iconbanner_prev,
+.section-home-page .slider_iconbanner_next {
+
+    font-size: 15px;
+    display: block;
+    color: #1c1e22;
+}
+
+.section-home-page .slick-dots {
+    bottom: 4%;
+    z-index: 5;
+    left: -40%;
+}
+
+
+.section-home-page .slick-dots li {
+    position: relative;
+    margin-right: 110px;
+}
+
+.section-home-page .slick-dots li p {
+    font-size: 24px;
+    color: #707070;
+}
+
+.section-home-page .slick-dots li p:hover {
+    color: #fff;
+}
+
+.section-home-page .slick-dots li.slick-active {
+    margin-right: 110px;
+
+}
+
+.section-home-page .slick-dots li.slick-active p {
+    color: #fff;
+}
+
+.section-home-page .slick-dots li::after {
+    content: " ";
+    width: 108px;
+    height: 1px;
+    background-color: #707070;
+    position: absolute;
+    top: 55%;
+    /* right: 0; */
+    left: 110%;
+}
+
+.section-home-page .slick-dots li:last-child::after {
+    width: 0;
+    height: 0;
+    /* background-color: blue; */
+}
+
+.section-home-page .slick-dots li.slick-active button:before {
+    color: red;
+    font-size: 20px;
+}
+
+.section-home-page .slick-dots li button:before {
+    color: red;
+    font-size: 20px;
+}
+
+/* ___PoslistCateProduct_____ */
+.pos-special-products .content-listcate {
+    display: grid;
+    grid-template-columns: 20% 80%;
+}
+
+.pos-special-products .content-tabcate {
+    grid-template-columns: 32% 68% !important;
+}
+
+.pos-special-products .content-listcate .col-left {
+    display: flex;
+    border: 1px solid #e5e5e5;
+    border-right: none;
+    flex-wrap: wrap;
+}
+
+.pos-special-products .content-listcate .col-left .tab_cates {
+    flex: 1;
+    padding: 20px;
+}
+
+.pos-special-products .content-listcate .col-left .tab_cates li {
+    display: block;
+    vertical-align: top;
+    margin-bottom: 15px;
+    font-size: 13px;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+.pos-special-products .content-listcate .col-left .tab_cates li:hover {
+    color: #15bd68;
+}
+
+.pos-special-products .content-listcate .col-left img {
+    height: 100%;
+}
+
+/* ____BannerTwo____s */
+.home-banner-two img {
+    width: 100%;
+}
+
+.home-banner-two .banner-box {
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 30px;
+    border-radius: 5px;
+}
+
+.home-banner-two .banner-box:hover img {
+    transform: scale(1.1);
+    transition: all 300ms linear;
+}
+
+.home-banner-two .banner-box .text-banner {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    transform: translateY(-50%);
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 30px;
+    pointer-events: none;
+}
+
+.home-banner-two .text-banner p {
+    color: #1c1e22;
+    font-size: 24px;
+    margin-bottom: 0;
+}
+
+.home-banner-two .text-banner h3 {
+    color: #1c1e22;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.home-banner-two .text-banner h4 {
+    font-size: 24px;
+    color: #da2e1f;
+    text-transform: uppercase;
+    margin-bottom: 0;
+    font-family: 'Dosis', sans-serif;
+}
+
+/* _____-BannerBlog____ */
+.home_blog_post_inner {
+    position: relative;
+    margin-bottom: 60px;
+}
+
+.blog-content-items {
+    padding: 0;
+}
+
+.home_blog_post_inner .blog_slider {
+    display: block;
+    width: 100%;
+    -webkit-tap-highlight-color: transparent;
+    z-index: 1;
+}
+
+.home_blog_post_inner .blog_slider .blog-item {
+    padding: 0 15px;
+}
+
+.home_blog_post_inner .blog_post {
+    width: 100%;
+    background: #fff;
+}
+
+.home_blog_post_inner .blog_post .blog_post_content_top .post_thumbnail {
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+.home_blog_post_inner img {
+    width: 100%;
+}
+
+.home_blog_post_inner .blog_post .post_content {
+    padding: 20px 0 0 0;
+}
+
+.home_blog_post_inner .blog_post .post_content .content-inner .post_meta {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    overflow: hidden;
+    position: relative;
+    flex-wrap: wrap;
+}
+
+.home_blog_post_inner .blog_post .post_content .content-inner .post_meta .meta_author,
+.home_blog_post_inner .blog_post .post_content .content-inner .post_meta .meta_date {
+
+    font-size: 14px;
+    color: #184d47;
+    margin-right: 5px;
+    margin-bottom: 0;
+    line-height: 1.5;
+}
+
+.home_blog_post_inner .blog_post .post_content .content-inner .post_meta .meta_author span {
+    color: #15bd68;
+}
+
+.home_blog_post_inner .blog_post .post_content .post_title {
+    margin: 0;
+}
+
+.home_blog_post_inner .blog_post .post_content .post_title a {
+    line-height: 1.5;
+    color: #1c1e22;
+    text-transform: capitalize;
+    position: relative;
+    display: block;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.blog-content-items {
+    padding: 0;
+}
+
+.home_blog_post_inner .blog_post:hover img {
+    transform: scale(1.1);
+    transition: all 300ms linear;
+}
+
+@media screen and (max-width: 1200px) {
+
+    .banner-left-main .banner-item .banner-content .title p,
+    .banner-left-main .banner-item .banner-content .price p {
+        font-size: 15px;
+        margin: 1.6680567139vw 0;
+    }
+
+    .banner-left-main .banner-item .banner-content .title h2 {
+        font-size: 40px;
+    }
+
+    .pos-special-products .content-tabcate {
+        grid-template-columns: 25% 75% !important;
+    }
+
+    .pos-special-products .content-tabcate .banner-box img {
+        display: none;
+    }
+
+    .banner-left-main .banner-item .banner-content .price h3 {
+        font-size: 34px
+    }
+
+    .banner-left-main .banner-item .banner-content .button a {
+        padding: 5px 20px;
+    }
+
+    .pos-special-products .content-listcate {
+        grid-template-columns: 25.2% 74.8%;
+    }
+
+    .pos-special-products .content-listcate .col-left {
+        justify-content: center;
+    }
+
+    .section-home-page .slick-prev {
+        left: 93%;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .pos-special-products .content-listcate {
+        grid-template-columns: 33.7% 66.3%;
+    }
+
+    .popular-categories-main .content-list .item-categories {
+        width: 50%;
+    }
+
+    .section-home-page .slick-prev {
+        left: 91.5%;
+    }
+
+    .banner-left-main .banner-item .banner-content .title h2 {
+        font-size: 34px;
+        line-height: 1;
+    }
+
+    .banner-left-main .banner-item .banner-content .title p,
+    .banner-left-main .banner-item .banner-content .price p,
+    .banner-left-main .banner-item .banner-content .price h3,
+    .banner-left-main .banner-item .banner-content .button a {
+
+        margin: 10px 0;
+    }
+
+    .pos_bannerslide .banner-box .text-banner h3 {
+        margin-bottom: 10px;
+    }
+
+    .banner-box .text-banner a {
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .pos_bannerslide .col-md-8 {
+        width: 100%;
+        margin-bottom: 30px;
+        flex: 1 1 100%;
+    }
+
+    .pos_bannerslide .col-md-4 {
+        width: 100%;
+    }
+
+    .pos_bannerslide .col-md-4 img {
+        width: 100%;
+    }
+
+    .pos-special-products .content-listcate,
+    .pos-special-products .content-listcate .col-left {
+        display: block;
+    }
+
+    .pos-special-products .content-listcate .col-left img {
+        width: 100%;
+    }
+
+    .home-banner-two .col-md-6 {
+        width: 100%;
+        flex: 1 1 100%;
+    }
+
+    .pos-special-products .content-listcate .col-left {
+        border: none;
+    }
+
+    .pos-special-products .content-listcate .col-left .tab_cates {
+        margin-bottom: 15px;
+        white-space: nowrap;
+        overflow-y: hidden;
+        padding-bottom: 15px;
+        display: flex;
+    }
+
+    .pos-special-products .content-listcate .col-left .tab_cates li {
+        display: inline-block;
+        vertical-align: top;
+        margin: 0 15px 0 0;
+    }
+
+    .pos-special-products .owl-stage-outer {
+        border: none;
+    }
+}
+
+@media screen and (max-width: 490px) {
+    .pos_bannerslide .col-md-8 {
+        display: none;
+    }
+
+    .popular-categories-main .content-list .item-categories {
+        width: 100%;
+    }
+
+    .home-banner-two .text-banner p,
+    .home-banner-two .text-banner h3,
+    .home-banner-two .text-banner h4,
+    .home_blog_post_inner .blog_post .post_content .post_title a {
+
+        font-size: 18px;
+    }
+
+    .home-banner-two .text-banner h3 {
+        margin-bottom: 10px;
+    }
 }
