--- a/src/assets/css/single-product-copy.css
+++ b/src/assets/css/single-product-copy.css
@@ -186,6 +186,7 @@
     padding: 20px;
     background: #fff;
     position: relative;
+    height: 192px;
 }
 
 .item-product .product-miniature .product_desc .hook-reviews {
