--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -252,7 +252,8 @@
     cursor: pointer;
 }
 
-.pos-special-products .content-listcate .col-left .tab_cates li:hover {
+.pos-special-products .content-listcate .col-left .tab_cates li:hover,
+.pos-special-products .content-listcate .col-left .tab_cates li .active {
     color: #15bd68;
 }
 
